gw-keycloak.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - keycloak.localhost
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak-rule
spec:
  hosts:
  - keycloak.localhost
  gateways:
  - keycloak-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
